# document-exam

./: CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/src/: __init__.py  config.py  database.py
backend/src/chat/: __init__.py  routes.py
backend/src/documents/: __init__.py  models.py  routes.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Chat.tsx  Dashboard.tsx  Documents.tsx  FileList.tsx  FileUpload.tsx  Sidebar.tsx
src/: upload_pdf.py
