[project]
name = "document-exam-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "David Taing",email = "dave@teeang.net"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-core (>=0.3.72,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-pymupdf4llm (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)",
    "flask (>=3.1.1,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
